--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,12 @@ playwright>=1.40.0
 # Async HTTP client (optional - for captcha solving)
 aiohttp>=3.9.0
 
+# WebSocket support (for Master/Slave communication)
+websockets>=12.0
+
+# SSH client (for SSH scanner in v3.7.0)
+asyncssh>=2.14.0
+
 # GeoIP lookup (optional - for proxy location detection)
 geoip2>=4.8.0
 
